# testing-blocking-and-non-blocking-in-http

./: README.md  compose.yaml
go/: Dockerfile  main.go
nginx/: default.conf
php/: Dockerfile  composer.json
php/public/: index.php
python/: Dockerfile  app.py  pyproject.toml
ruby/: Dockerfile  Gemfile  config.ru  puma.rb
rust/: Cargo.toml  Dockerfile
rust/src/: main.rs
